--- a/Readme
+++ b/Readme
@@ -1,5 +1,7 @@
 # Basic Paint - implemented in C
 
+![](./images/11.png)
+
 A simple multi-color brush paint software implemented using SDL2 and C.
 
 Purpose - For personal use & scribbling.
